13/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/hamcrest-library-1.3.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/21/7532_y194z7fzt_l938yzpk80000gn/T/AppTranslocation/AE97858F-05F2-4B3A-B931-9B6199327843/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/tomerpeker/OpenUniversity/13
-d
/Users/tomerpeker/OpenUniversity/13/doc
-encoding
UTF-8
-charset
UTF-8
/Users/tomerpeker/OpenUniversity/13/Driver.java
<---- end of javadoc command ---->
Loading source file /Users/tomerpeker/OpenUniversity/13/Driver.java...
/Users/tomerpeker/OpenUniversity/13/Driver.java:12: error: reached end of file while parsing
}
 ^
1 error
